# aurapanel

./: .gitignore  AURAPANEL_DISTRIBUTION_READINESS_REPORT_2026-03-26.md  CHANGELOG.md  ENDPOINT_AUDIT.md  LICENSE  Makefile  README.md  README.tr.md  aurapanel_bootstrap.sh  aurapanel_installer.sh  install.sh  start-dev.ps1
api-gateway/: go.mod  main.go
core/: Cargo.toml
core/src/: main.rs
core/src/api/: mod.rs  routes.rs  terminal.rs
core/src/auth/: jwt.rs  mod.rs  totp.rs
core/src/config/: settings.rs
core/src/runtime/: mod.rs
core/src/services/: audit.rs  federated.rs  manager.rs  mod.rs  ols_tuning.rs
core/src/services/analytics/: mod.rs
core/src/services/apps/: mod.rs  nodejs.rs  python.rs
core/src/services/cgroups/: mod.rs
core/src/services/cloudflare/: cloudflare.rs  mod.rs
core/src/services/db/: auradb.rs  backup.rs  mod.rs  ops.rs
core/src/services/dns/: mod.rs
core/src/services/docker/: apps.rs  docker.rs  mod.rs
core/src/services/filemanager/: filemanager.rs  mod.rs
core/src/services/mail/: mod.rs  stalwart.rs  webmail.rs
core/src/services/malware/: mod.rs
core/src/services/migration/: mod.rs
core/src/services/monitor/: gitops.rs  logs.rs  mod.rs
core/src/services/nitro/: mod.rs
core/src/services/perf/: mod.rs
core/src/services/php/: mod.rs  php.rs
core/src/services/secure_connect/: mod.rs
core/src/services/security/: mod.rs  waf.rs
core/src/services/ssl/: mod.rs
core/src/services/status/: mod.rs  status.rs
core/src/services/storage/: backup.rs  mod.rs
core/src/services/users/: cms.rs  manager.rs  mod.rs  reseller.rs
core/src/services/websites/: mod.rs
core/src/services/wordpress/: mod.rs
docs/: api_contract_v1.md  documentation-index.md  final-system-audit-2026-03-30.md  hosting-panel-comparison.md  product-overview.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
installer/: aurapanel.sh  (+3 more)
wiki/: FAQ.md  (+10 more)
(+160 files in other folders)
