[package]
name = "aurapanel-core"
version = "0.1.0"
edition = "2021"
description = "AuraPanel System Core (Micro-Core)"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["cors", "trace", "auth"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.10"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Auth & Security
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
totp-rs = { version = "5.5.0", features = ["qr"] }

# Utilities
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.81"
thiserror = "1.0.57"
chrono = { version = "0.4.35", features = ["serde"] }
futures-util = "0.3.31"
flate2 = "1.1.0"
tar = "0.4.44"
getrandom = "0.2.15"
